[package]
name = "liva_vm"
version = "0.1.0"
authors = ["Patrick <patrickhaller40@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liva_parser = { path = "../live_parser" }
clap = "2.33.3"

[profile.release]
debug = true
